...
                Button(action: {
                    if let data = viewModel.image {
                        UIImageWriteToSavedPhotosAlbum(data, nil, nil, nil)
                    }
                }, label: {
                    Image(systemName: "square.and.arrow.down")
                    Text("Save")
                })
                
                Button(action: {
                    if let data = viewModel.image {
                        let activityVC = UIActivityViewController(activityItems: [data], applicationActivities: nil)
                        UIApplication.shared.windows.first?.rootViewController?.present(activityVC, animated: true, completion: nil)
                    }
                }, label: {
                    Image(systemName: "square.and.arrow.up")
                    Text("Share")
                })
            }
        }
    }
}

...
