...
                }
                .onAppear() {
                    UITableView.appearance().backgroundColor = UIColor.clear
                    UITableViewCell.appearance().backgroundColor = UIColor.clear
                }
            }
            .navigationTitle("Photos 🌸")
            .navigationBarItems(leading: Image("gelato")
                .resizable()
                .aspectRatio(contentMode: .fit)
            )
        }
        .onAppear {
            let appearance = UINavigationBarAppearance()
...
